# lab3_os

./: .gitignore  CMakeLists.txt  README.md  run_tests.sh
include/: common.h
src/: main.cpp  marker.cpp  sync.cpp  utils.cpp
tests/: test_marker.cpp
